# MeXtract

./: .gitignore  ANNOTATION.md  GUIDELINES.md  GUIDELINES_MODEL.md  README.md  default_qwen_chat_template.jinja  download.sh  dpo.slurm  dummy.json  evaluate_tuned_models.sh  finetune_preference.sh  main.py  multi_slurm_finetune.sh  plot.sh  pyproject.toml  railway.json  railway.toml  requirements.txt  run.sh  run.slurm  run_mole.sh  upload.sh
MagedAnnotations/: de-limit.json  hellaswag.json  hle.json  jaquad.json  jesc.json  laser.json  media_intent.json  mgb-3.json  rubq.json  russian_jeopardy.json  seahorse.json
blog/: demo.html  index.html
datasets/: sft_test.parquet  sft_valid.parquet
helpers/: creat_citations.py  create_cutoff.py  create_examples.py  create_hf.py  download_acl_anthology.py  download_arxiv.py  explore.py  fix_abstracts.py  generate_resource_testfiles.py  get_masader_keywords.py  inference.py  remove_benchmark_key.py  remove_results.py  test_search.py  test_template.py  update_annotations.py  visualizer.py
scripts/: finetune.slurm  run.slurm  run_openrouter.slurm  source_time_benchmark.py
src/: arg_utils.py  cache_papers.py  constants.py  create_model_metadata.py  create_preference_dataset.py  create_synth_dataset.py  evaluate.py  finetune.py  finetune_hf.py  finetune_preference.py  inspect_preference_dataset.py  merge.py  merge_sft.py  plot_utils.py  plots.py  predict.py  prepare_finetuning_datasets.py  push_mole_resources.py  remove_model.py  schema.py  search.py  search_acl.py  search_arxiv.py  tests.py  traditional.py  type_classes.py  utils.py
(+4217 files in other folders)
